--- a/buskita.html
+++ b/buskita.html
@@ -97,7 +97,7 @@
                 // Leafletマップを初期位置で作成
                 map = L.map('map').setView([43.0, 141.4], 10);
 
-                // タイルレイヤーを追加（異なるタイルプロバイダーを選択できます）
+                // タイルレイヤーを追加（ほかのタイルプロバイダーも利用できる）
                 /*
                 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                     attribution: '© OpenStreetMap contributors'
